--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <h2>Raad het getal!</h2>
 
     <h3>Kies een getal tussen 1 en 100.</h3>
-    
+
     <p>Als je op de button "Is dit het juiste getal" drukt, zal onderaan een hint gegeven worden
         en of het gekozen getal juist is of niet.
 
@@ -19,7 +19,8 @@
 
     <mat-form-field class="form-full-width" appearance="fill">
         <mat-label>doe een gok: een getal tussen 1 en 100</mat-label>
-        <input matInput min="1" max="100" type="number" [(ngModel)]="value" placeholder="een getal tussen 1 en 100">
+        <input matInput min="1" max="100" type="number" [(ngModel)]="value" #ctrl="ngModel" required
+            placeholder="een getal tussen 1 en 100">
         <mat-hint>kijk onderaan naar de gegeven hint</mat-hint>
         <!-- <mat-error *ngIf="value === null">{{getErrorMessage() }}</mat-error> werkt niet waarom?????-->
     </mat-form-field>
@@ -27,7 +28,7 @@
 
     <p *ngIf="value != null"> het gekozen getal is {{value}} </p>
     <br>
-    
+
     <p>
         <button mat-raised-button (click)="getalOK()"> gok {{aantalGokkenGedaan }}</button>
     </p>
@@ -37,6 +38,22 @@
     <br>
     <br>
 
+    <table mat-table [dataSource]="tabelGokGetallen">
+
+        <ng-container matColumnDef="gokPoging">
+            <th mat-header-cell *matHeaderCellDef> GokPoging </th>
+            <td mat-cell *matCellDef="let element"> {{element.gokPoging}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="Getal">
+            <th mat-header-cell *matHeaderCellDef> Getal </th>
+            <td mat-cell *matCellDef="let element"> {{element.getal}} </td>
+        </ng-container>
+
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let myRowData; columns: displayedColumns"></tr>
+    </table>
 
 
     <p>{{randomNummer}}</p>
