--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Raad het getal!</h2>
+    <h2 >Raad het getal! </h2>
 
     <h3>Kies een getal tussen 1 en 100.</h3>
 
@@ -17,8 +17,8 @@
 
     <br>
 
-    <mat-form-field class="form-full-width" appearance="fill">
-        <mat-label>doe een gok: een getal tussen 1 en 100</mat-label>
+    <mat-form-field class="form-full-width" appearance="fill" >
+        <mat-label  class="belangrijk">doe een gok: een getal tussen 1 en 100</mat-label>
         <input matInput min="1" max="100" type="number" [(ngModel)]="value" #ctrl="ngModel" required
             placeholder="een getal tussen 1 en 100">
         <mat-hint>kijk onderaan naar de gegeven hint</mat-hint>
@@ -38,20 +38,20 @@
     <br>
     <br>
 
-    <table mat-table [dataSource]="tabelGokGetallen">
+    <table mat-table [dataSource]="tabelGokGetallen" class="mat-elevation-z8" >
 
-        <ng-container matColumnDef="gokPoging">
-            <th mat-header-cell *matHeaderCellDef> GokPoging </th>
-            <td mat-cell *matCellDef="let element"> {{element.gokPoging}} </td>
+        <ng-container matColumnDef="gokPoging"  >
+            <th mat-header-cell *matHeaderCellDef > Gok </th>
+            <td mat-cell *matCellDef="let element" > {{element.gokPoging}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="Getal">
+        <ng-container matColumnDef="getal" >
             <th mat-header-cell *matHeaderCellDef> Getal </th>
             <td mat-cell *matCellDef="let element"> {{element.getal}} </td>
         </ng-container>
 
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns" ></tr>
         <tr mat-row *matRowDef="let myRowData; columns: displayedColumns"></tr>
     </table>
 
