--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2 >Raad het getal! </h2>
+    <h2>Raad het getal! </h2>
 
     <h3>Kies een getal tussen 1 en 100.</h3>
 
@@ -13,12 +13,13 @@
     <br>
     <br>
     <br>
-    <p>Je hebt nog {{aantalGokken}} pogingen</p>
+    <p *ngIf="!gewonnen && !verloren" >Je hebt nog {{aantalGokken}} pogingen</p>
+    <p *ngIf="!gewonnen && !verloren && (value === null)">{{nullBoodschap}}</p>
+    <p *ngIf="!gewonnen && !verloren && value != null && (value <= 0 || value >100)">{{cijferHint}}</p>
+    <p *ngIf="!gewonnen && !verloren && (value > 0 || value <=100)"> {{hint}} </p>
 
-    <br>
-
-    <mat-form-field class="form-full-width" appearance="fill" >
-        <mat-label  class="belangrijk">doe een gok: een getal tussen 1 en 100</mat-label>
+    <mat-form-field *ngIf="!gewonnen && !verloren" class="form-full-width" appearance="fill">
+        <mat-label class="belangrijk">doe een gok: een getal tussen 1 en 100</mat-label>
         <input matInput min="1" max="100" type="number" [(ngModel)]="value" #ctrl="ngModel" required
             placeholder="een getal tussen 1 en 100">
         <mat-hint>kijk onderaan naar de gegeven hint</mat-hint>
@@ -26,34 +27,51 @@
     </mat-form-field>
     <br>
 
-    <p *ngIf="value != null"> het gekozen getal is {{value}} </p>
+    <p *ngIf="!gewonnen && !verloren && value != null"> het gekozen getal is {{value}} </p>
     <br>
 
-    <p>
+    <p *ngIf="!gewonnen && !verloren" >
         <button mat-raised-button (click)="getalOK()"> gok {{aantalGokkenGedaan }}</button>
     </p>
 
-    <p *ngIf="(value != null)">{{hint}}</p>
-    <p *ngIf="(value === null)">{{nullBoodschap}}</p>
-    <br>
-    <br>
+    
+    
+    <p *ngIf="verloren ">{{verlorenBoodschap}} {{randomNummer}}.</p>
+    <p *ngIf="gewonnen ">{{gewonnenBoodschap}}</p>
 
-    <table mat-table [dataSource]="tabelGokGetallen" class="mat-elevation-z8" >
+    <div *ngIf="(gewonnen || verloren)">
+        <p> de getallen die je gegokt hebt waren:
+            <a *ngFor="let item of tabelGokGetallen">
+                {{item.getal}}
+            </a>
+        </p>
 
-        <ng-container matColumnDef="gokPoging"  >
-            <th mat-header-cell *matHeaderCellDef > Gok </th>
-            <td mat-cell *matCellDef="let element" > {{element.gokPoging}} </td>
+    </div>
+
+    <button *ngIf="(gewonnen || verloren)" mat-raised-button (click)="herbeginSpel()"> Herbegin!</button>
+
+   
+
+    <br>
+    <h3 *ngIf="(!gewonnen && !verloren)">Je vorige pogingen waren: </h3>
+
+    <table *ngIf="(!gewonnen && !verloren)" mat-table [dataSource]="tabelGokGetallen" class="mat-elevation-z8">
+
+        <ng-container matColumnDef="gokPoging">
+            <th mat-header-cell *matHeaderCellDef> Gok </th>
+            <td mat-cell *matCellDef="let element"> {{element.gokPoging}} </td>
         </ng-container>
 
-        <ng-container matColumnDef="getal" >
+        <ng-container matColumnDef="getal">
             <th mat-header-cell *matHeaderCellDef> Getal </th>
             <td mat-cell *matCellDef="let element"> {{element.getal}} </td>
         </ng-container>
 
 
-        <tr mat-header-row *matHeaderRowDef="displayedColumns" ></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let myRowData; columns: displayedColumns"></tr>
     </table>
+
 
 
     <p>{{randomNummer}}</p>
