--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,18 +1,62 @@
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 
+body {     
+    /* background-color: rgb(194, 186, 156); */
+    align-items:center;
+   text-align: center;
+    height: 180%;
+   margin: 0;
+}
+
+/* div {
+    
+} */
+
+
+
+#intro {
+    align-content: center;
+    background-color:rgba(238, 237, 231, 0.041);
+    border: solid 10px black;
+    width : 75%;    
+    margin: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+#tekst {
+    background-color:rgb(236, 238, 227);
+    align-items:center;
+    border: solid 5px black;
+    padding: 8px;
+    width : 65%;
+    margin: 5px;
+    margin-left: auto;
+    margin-right: auto;
+}
 .form-full-width {
+    border: solid 3px black;
+    /* background-color:rgb(188, 189, 185); */
+    align-items:center;
     min-width: 150px;
     max-width: 300px;
     width:100%;
+    margin: 50px;
+    margin-top: 10px;
+    
 }
 
 .belangrijk{
     width: 100;
     color: red;
 }
-
 table {
+    /* background-color: rgb(240, 230, 230); */
+    margin: auto;
     width: 175px;
   }
+
   
 
