--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,23 +1,13 @@
-@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
-
-
 body {     
-    /* background-color: rgb(194, 186, 156); */
+    background-color: rgb(194, 186, 156);
     align-items:center;
    text-align: center;
     height: 180%;
-   margin: 0;
-}
-
-/* div {
-    
-} */
-
-
+   }
 
 #intro {
     align-content: center;
-    background-color:rgba(238, 237, 231, 0.041);
+    background-color: rgb(224, 219, 203);
     border: solid 10px black;
     width : 75%;    
     margin: 15px;
@@ -27,7 +17,7 @@ body {
 }
 
 #tekst {
-    background-color:rgb(236, 238, 227);
+    background-color: rgb(224, 219, 203);
     align-items:center;
     border: solid 5px black;
     padding: 8px;
@@ -38,7 +28,7 @@ body {
 }
 .form-full-width {
     border: solid 3px black;
-    /* background-color:rgb(188, 189, 185); */
+    background-color: rgb(224, 219, 203);
     align-items:center;
     min-width: 150px;
     max-width: 300px;
@@ -53,10 +43,20 @@ body {
     color: red;
 }
 table {
-    /* background-color: rgb(240, 230, 230); */
     margin: auto;
-    width: 175px;
+    width: 175px;    
   }
 
+  mat-grid-list {
+    align-items:center;
+      max-width: 75%;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 10px;
+  }
+  mat-grid-tile {
+    
+    background-color: rgb(224, 219, 203);
+  } 
   
 
