--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
         <p> Je moet het getal raden binnen de minuut.</p> -->
     </div>
 
-
+<p>{{secondsLocal}}</p>
 
     <mat-grid-list  cols="2" rowHeight="100px"  >
         <mat-grid-tile>
