--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,7 +11,7 @@
         <div id="matgrid">
             <mat-grid-list cols="2" rowHeight="100px">
                 <mat-grid-tile>
-                    <p>Vul een getal in, en klik op de button "klik voor gok x"</p>
+                    <p>Vul een getal in, en klik op de button "bevestig gok x"</p>
                 </mat-grid-tile>
                 <mat-grid-tile>
                     <p>je krijgt onderaan een hint. Is het gekozen getal juist is of niet.</p>
@@ -21,7 +21,7 @@
 
                 </mat-grid-tile>
                 <mat-grid-tile>
-                    <p> Je moet het getal raden binnen de minuut.</p>
+                    <p> Je moet het getal raden binnen de minuut na de eerste gok .</p>
                 </mat-grid-tile>
             </mat-grid-list>
         </div>
@@ -34,7 +34,7 @@
                 <p *ngIf="!gewonnen && !verloren && (value > 0 || value <=100)"> {{hint}} </p>
                 <p *ngIf="verloren ">{{verlorenBoodschap}} {{randomNummer}}.</p>
                 <p *ngIf="gewonnen ">{{gewonnenBoodschap}}</p>
-                <p> Je hebt nog {{secondsLocal}} seconden</p>
+                <p *ngIf="!gewonnen && !verloren && !eersteGok"> Je hebt nog {{secondsLocal}} seconden</p>
             </div>
 
             <div id="gok" fxFlex="30" fxLayout="column" fxFlex.xs="100%" *ngIf="!gewonnen && !verloren" >
@@ -78,7 +78,7 @@
             <div fxFlex="30" fxLayout="column" fxFlex.xs="100%">
                 <table *ngIf="(!gewonnen && !verloren)" mat-table [dataSource]="tabelGokGetallen"
                     class="mat-elevation-z8">
-
+  
                     <ng-container matColumnDef="gokPoging">
                         <th mat-header-cell *matHeaderCellDef> Gok </th>
                         <td mat-cell *matCellDef="let element"> {{element.gokPoging}} </td>
