--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
                 </div>
 
                 <div fxFlex="30" fxLayout="column" fxFlex.xs="100%">
-                    <button *ngIf="(gewonnen || verloren || secondsLocal<=0)" mat-raised-button (click)="herbeginSpel()">
+                    <button *ngIf="(gewonnen || verloren || secondsLocal<=0)" mat-raised-button (click)="Init()">
                         Herbegin!</button>
                 </div>
             </div>
